@@ -1,215 +1,5 @@
 #!/usr/bin/bash
 
-: '
-エイト・クイーンの解説をしています。ご興味のある方はどうぞ。
-
-Ｎクイーン問題（１８）第四章　偉人のソースを読む「エイト・クイーンノスタルジー」
-https://suzukiiichiro.github.io/posts/2023-04-18-01-n-queens-suzuki/
-Ｎクイーン問題（１７）第四章　偉人のソースを読む「Ｎ２４を発見 Ｊｅｆｆ Ｓｏｍｅｒｓ」
-https://suzukiiichiro.github.io/posts/2023-04-21-01-n-queens-suzuki/
-Ｎクイーン問題（１６）第三章　対象解除法 ソース解説
-https://suzukiiichiro.github.io/posts/2023-04-18-01-n-queens-suzuki/
-Ｎクイーン問題（１５）第三章　対象解除法 ロジック解説
-https://suzukiiichiro.github.io/posts/2023-04-13-02-nqueens-suzuki/
-Ｎクイーン問題（１４）第三章　ミラー
-https://suzukiiichiro.github.io/posts/2023-04-13-01-nqueens-suzuki/
-Ｎクイーン問題（１３）第三章　ビットマップ
-https://suzukiiichiro.github.io/posts/2023-04-05-01-nqueens-suzuki/
-Ｎクイーン問題（１２）第二章　まとめ
-https://suzukiiichiro.github.io/posts/2023-03-17-02-n-queens-suzuki/
-Ｎクイーン問題（１１）第二章　配置フラグの再帰・非再帰
-https://suzukiiichiro.github.io/posts/2023-03-17-01-n-queens-suzuki/
-Ｎクイーン問題（１０）第二章　バックトラックの再帰・非再帰
-https://suzukiiichiro.github.io/posts/2023-03-16-01-n-queens-suzuki/
-Ｎクイーン問題（９）第二章　ブルートフォースの再帰・非再帰
-https://suzukiiichiro.github.io/posts/2023-03-14-01-n-queens-suzuki/
-Ｎクイーン問題（８）第一章　まとめ
-https://suzukiiichiro.github.io/posts/2023-03-09-01-n-queens-suzuki/
-Ｎクイーン問題（７）第一章　ブルートフォース再び
-https://suzukiiichiro.github.io/posts/2023-03-08-01-n-queens-suzuki/
-Ｎクイーン問題（６）第一章　配置フラグ
-https://suzukiiichiro.github.io/posts/2023-03-07-01-n-queens-suzuki/
-Ｎクイーン問題（５）第一章　進捗表示テーブルの作成
-https://suzukiiichiro.github.io/posts/2023-03-06-01-n-queens-suzuki/
-Ｎクイーン問題（４）第一章　バックトラック
-https://suzukiiichiro.github.io/posts/2023-02-21-01-n-queens-suzuki/
-Ｎクイーン問題（３）第一章　バックトラック準備編
-https://suzukiiichiro.github.io/posts/2023-02-14-03-n-queens-suzuki/
-Ｎクイーン問題（２）第一章　ブルートフォース
-https://suzukiiichiro.github.io/posts/2023-02-14-02-n-queens-suzuki/
-Ｎクイーン問題（１）第一章　エイトクイーンについて
-https://suzukiiichiro.github.io/posts/2023-02-14-01-n-queens-suzuki/
-
-エイト・クイーンのソース置き場 BashもJavaもPythonも！
-https://github.com/suzukiiichiro/N-Queens
-';
-
-: '
- ## bash版
- <> symmetry.sh matome5.sh 対象解除
- N:        Total       Unique        hh:mm:ss
- 4:            2            1         0:00:00
- 5:           10            2         0:00:00
- 6:            4            1         0:00:00
- 7:           40            6         0:00:00
- 8:           92           12         0:00:00
- 9:          352           46         0:00:00
-10:          724           92         0:00:02
-11:         2680          341         0:00:05
-12:        14200         1787         0:00:26
-13:        73712         9233         0:02:28
-14:       365596        45752         0:14:18
-15:      2279184       285053         1:23:34 
-
- ## python版
- $ python py13_4_multiprocess_nqueen.py
-１３＿４マルチプロセス版
- N:        Total       Unique        hh:mm:ss.ms
- 4:            2            1         0:00:00.124
- 5:           10            2         0:00:00.110
- 6:            4            1         0:00:00.116
- 7:           40            6         0:00:00.115
- 8:           92           12         0:00:00.119
- 9:          352           46         0:00:00.118
-10:          724           92         0:00:00.121
-11:         2680          341         0:00:00.122
-12:        14200         1787         0:00:00.228
-13:        73712         9233         0:00:00.641
-14:       365596        45752         0:00:03.227
-15:      2279184       285053         0:00:19.973
-
-ちなみにpythonシングルプロセス版
-15:      2279184       285053         0:00:54.645
-
-
- ## Lua版
- $ luajit Lua12_N-Queen.lua
- N:            Total       Unique    hh:mm:ss
- 2:                0            0    00:00:00
- 3:                0            0    00:00:00
- 4:                2            1    00:00:00
- 5:               10            2    00:00:00
- 6:                4            1    00:00:00
- 7:               40            6    00:00:00
- 8:               92           12    00:00:00
- 9:              352           46    00:00:00
-10:              724           92    00:00:00
-11:             2680          341    00:00:00
-12:            14200         1787    00:00:00
-13:            73712         9233    00:00:00
-14:           365596        45752    00:00:00
-15:          2279184       285053    00:00:03
-16:         14772512      1846955    00:00:20
-17:         95815104     11977939    00:02:13
-
- ## OpenCL版
-$ gcc -Wall -W -O3 -std=c99 -pthread -lpthread -lm -o 07_52NQueen 07_52gpu_queens.c -framework OpenCL
-52. OpenCL (07_38 *N*si*si アルゴリムは全部のせ) 
- N:    Total          Unique      dd:hh:mm:ss.ms
- 4:        2                   1  00:00:00:00.43
- 5:       10                   2  00:00:00:00.35
- 6:        4                   1  00:00:00:00.35
- 7:       40                   6  00:00:00:00.35
- 8:       92                  12  00:00:00:00.35
- 9:      352                  46  00:00:00:00.35
-10:      724                  92  00:00:00:00.35
-11:     2680                 341  00:00:00:00.35
-12:    14200                1787  00:00:00:00.35
-13:    73712                9233  00:00:00:00.36
-14:   365596               45752  00:00:00:00.37
-15:  2279184              285053  00:00:00:01.58
-
- ## Java版
-$ javac -cp .:commons-lang3-3.4.jar Java13c_NQueen.java && java  -cp .:commons-lang3-3.4.jar: -server -Xms4G -Xmx8G -XX:-HeapDumpOnOutOfMemoryError -XX:NewSize=256m -XX:MaxNewSize=256m -XX:-UseAdaptiveSizePolicy -XX:+UseConcMarkSweepGC Java13c_NQueen  ;
-１３．Java 再帰 並列処理 
- N:        Total          Unique  hh:mm:ss.SSS
- 4:            2               1  00:00:00.001
- 5:           10               2  00:00:00.001
- 6:            4               1  00:00:00.000
- 7:           40               6  00:00:00.001
- 8:           92              12  00:00:00.001
- 9:          352              46  00:00:00.001
-10:          724              92  00:00:00.001
-11:         2680             341  00:00:00.003
-12:        14200            1787  00:00:00.002
-13:        73712            9233  00:00:00.005
-14:       365596           45752  00:00:00.021
-15:      2279184          285053  00:00:00.102
-16:     14772512         1846955  00:00:00.631
-17:     95815104        11977939  00:00:04.253
-
-ちなみにシングルスレッド
-15:      2279184          285053  00:00:00.324
-16:     14772512         1846955  00:00:02.089
-17:     95815104        11977939  00:00:14.524
-
-
- ## GCC版
-$ gcc -Wall -W -O3 -g -ftrapv -std=c99 -pthread GCC13.c && ./a.out [-c|-r]
-１３．CPU 非再帰 並列処理 pthread
- N:        Total          Unique  dd:hh:mm:ss.ms
- 4:            2               1  00:00:00:00.00
- 5:           10               2  00:00:00:00.00
- 6:            4               1  00:00:00:00.00
- 7:           40               6  00:00:00:00.00
- 8:           92              12  00:00:00:00.00
- 9:          352              46  00:00:00:00.00
-10:          724              92  00:00:00:00.00
-11:         2680             341  00:00:00:00.00
-12:        14200            1787  00:00:00:00.00
-13:        73712            9233  00:00:00:00.00
-14:       365596           45752  00:00:00:00.01
-15:      2279184          285053  00:00:00:00.10
-16:     14772512         1846955  00:00:00:00.65
-17:     95815104        11977939  00:00:00:04.33
-
-ちなみにシングルスレッド
-15:      2279184          285053            0.34
-16:     14772512         1846955            2.24
-17:     95815104        11977939           15.72
-
- ## GPU/CUDA版
-$ nvcc -O3 CUDA13_N-Queen.cu  && ./a.out -g
-１２．GPU 非再帰 並列処理 CUDA
- N:        Total      Unique      dd:hh:mm:ss.ms
- 4:            2               1  00:00:00:00.37
- 5:           10               2  00:00:00:00.00
- 6:            4               1  00:00:00:00.00
- 7:           40               6  00:00:00:00.00
- 8:           92              12  00:00:00:00.01
- 9:          352              46  00:00:00:00.01
-10:          724              92  00:00:00:00.01
-11:         2680             341  00:00:00:00.01
-12:        14200            1787  00:00:00:00.02
-13:        73712            9233  00:00:00:00.03
-14:       365596           45752  00:00:00:00.03
-15:      2279184          285053  00:00:00:00.04
-16:     14772512         1846955  00:00:00:00.08
-17:     95815104        11977939  00:00:00:00.35
-
-ちなみにシングルスレッド
-15:      2279184          285053            0.34
-16:     14772512         1846955            2.24
-17:     95815104        11977939           15.72
-
- ## nq27版
-$ gcc -Wall -W -O3 nq27_N-Queen.c && ./a.out -r
- N:        Total       Unique        hh:mm:ss.ms
- 4:            2               1            0.00
- 5:           10               2            0.00
- 6:            4               1            0.00
- 7:           40               6            0.00
- 8:           92              12            0.00
- 9:          352              46            0.00
-10:          724              92            0.00
-11:         2680             341            0.01
-12:        14200            1788            0.02
-13:        73712            9237            0.06
-14:       365596           45771            0.25
-15:      2279184          285095            1.14
-16:     14772512         1847425            6.69
-17:     95815104        11979381           43.82
-';
 declare -i size;
 declare -a board;
 declare -i bit;
@@ -219,6 +9,9 @@ declare -i COUNT2=COUNT4=COUNT8=0;
 declare -i MASK=SIDEMASK=LASTMASK=0;
 declare -i TOPBIT=ENDBIT=0;
 declare -i BOUND1=BOUND2=0;
+declare -a pres_a;        # チェーン
+declare -a pres_b;        # チェーン
+declare -i COUNTER[3];    # カウンター 0:COUNT2 1:COUNT4 2:COUNT8
 : 'B=(row     0:
       left    1:
       down    2:
@@ -343,241 +136,6 @@ function printRecord()
   echo "";
 }
 #
-: 'ボードレイアウトを出力 ビットマップ対応版';
-function printRecordCarryChain()
-{
-  ((TOTAL++));
-  size="$1";
-  flag="$2"; # bitmap版は1 それ以外は 0
-  echo "$TOTAL";
-  sEcho=" ";  
-  : 'ビットマップ版
-     ビットマップ版からは、左から数えます
-     上下反転左右対称なので、これまでの上から数える手法と
-     rowを下にたどって左から数える方法と解の数に変わりはありません。
-     0 2 4 1 3 
-    +-+-+-+-+-+
-    |O| | | | | 0
-    +-+-+-+-+-+
-    | | |O| | | 2
-    +-+-+-+-+-+
-    | | | | |O| 4
-    +-+-+-+-+-+
-    | |O| | | | 1
-    +-+-+-+-+-+
-    | | | |O| | 3
-    +-+-+-+-+-+
-  ';
-  if ((flag));then
-    local -i i=0;
-    local -i j=0;
-    for ((i=0;i<size;i++));do
-      for ((j=0;j<size;j++));do
-       if (( board[i]&1<<j ));then
-          sEcho="${sEcho}$((j)) ";
-       fi 
-      done
-    done
-  else 
-  : 'ビットマップ版以外
-     (ブルートフォース、バックトラック、配置フラグ)
-     上から数えます
-     0 2 4 1 3 
-    +-+-+-+-+-+
-    |O| | | | |
-    +-+-+-+-+-+
-    | | | |O| |
-    +-+-+-+-+-+
-    | |O| | | |
-    +-+-+-+-+-+
-    | | | | |O|
-    +-+-+-+-+-+
-    | | |O| | |
-    +-+-+-+-+-+
-     ';
-    local -i i=0;
-    for((i=0;i<size;i++)){
-      sEcho="${sEcho}${board[i]} ";
-    }
-  fi
-  echo "$sEcho";
-  echo -n "+";
-  local -i i=0;
-  for((i=0;i<size;i++)){
-    echo -n "-";
-    if((i<(size-1)));then
-      echo -n "+";
-    fi
-  }
-  echo "+";
-  local -i i=0;
-  local -i j=0;
-  for((i=0;i<size;i++)){
-    echo -n "|";
-    for((j=0;j<size;j++)){
-      if ((flag));then
-        if(( board[i]!=-1));then
-          if (( board[i]&1<<j ));then
-            echo -n "Q";
-          else
-            echo -n " ";
-          fi
-        else
-          echo -n " ";
-        fi
-      else
-        if((i==board[j]));then
-          echo -n "Q";
-        else
-          echo -n " ";
-        fi
-      fi
-      if((j<(size-1)));then
-        echo -n "|";
-      fi
-    }
-  echo "|";
-  if((i<(size-1)));then
-    echo -n "+";
-    local -i j=0;
-    for((j=0;j<size;j++)){
-      echo -n "-";
-      if((j<(size-1)));then
-        echo -n "+";
-      fi
-    }
-  echo "+";
-  fi
-  }
-  echo -n "+";
-  local -i i=0;
-  for((i=0;i<size;i++)){
-    echo -n "-";
-    if((i<(size-1)));then
-      echo -n "+";
-    fi
-  }  
-  echo "+";
-  echo "";
-}
-: 'ボードレイアウトを出力 ビットマップ対応版';
-function printRecordCarryChain()
-{
-  ((TOTAL++));
-  size="$1";
-  flag="$2"; # bitmap版は1 それ以外は 0
-  echo "$TOTAL";
-  sEcho=" ";  
-  : 'ビットマップ版
-     ビットマップ版からは、左から数えます
-     上下反転左右対称なので、これまでの上から数える手法と
-     rowを下にたどって左から数える方法と解の数に変わりはありません。
-     0 2 4 1 3 
-    +-+-+-+-+-+
-    |O| | | | | 0
-    +-+-+-+-+-+
-    | | |O| | | 2
-    +-+-+-+-+-+
-    | | | | |O| 4
-    +-+-+-+-+-+
-    | |O| | | | 1
-    +-+-+-+-+-+
-    | | | |O| | 3
-    +-+-+-+-+-+
-  ';
-  if ((flag));then
-    local -i i=0;
-    local -i j=0;
-    for ((i=0;i<size;i++));do
-      for ((j=0;j<size;j++));do
-       if (( board[i]&1<<j ));then
-          sEcho="${sEcho}$((j)) ";
-       fi 
-      done
-    done
-  else 
-  : 'ビットマップ版以外
-     (ブルートフォース、バックトラック、配置フラグ)
-     上から数えます
-     0 2 4 1 3 
-    +-+-+-+-+-+
-    |O| | | | |
-    +-+-+-+-+-+
-    | | | |O| |
-    +-+-+-+-+-+
-    | |O| | | |
-    +-+-+-+-+-+
-    | | | | |O|
-    +-+-+-+-+-+
-    | | |O| | |
-    +-+-+-+-+-+
-     ';
-    local -i i=0;
-    for((i=0;i<size;i++)){
-      sEcho="${sEcho}${board[i]} ";
-    }
-  fi
-  echo "$sEcho";
-  echo -n "+";
-  local -i i=0;
-  for((i=0;i<size;i++)){
-    echo -n "-";
-    if((i<(size-1)));then
-      echo -n "+";
-    fi
-  }
-  echo "+";
-  local -i i=0;
-  local -i j=0;
-  for((i=0;i<size;i++)){
-    echo -n "|";
-    for((j=0;j<size;j++)){
-      if ((flag));then
-        if(( board[i]!=-1));then
-          if (( board[i]&1<<j ));then
-            echo -n "Q";
-          else
-            echo -n " ";
-          fi
-        else
-          echo -n " ";
-        fi
-      else
-        if((i==board[j]));then
-          echo -n "Q";
-        else
-          echo -n " ";
-        fi
-      fi
-      if((j<(size-1)));then
-        echo -n "|";
-      fi
-    }
-  echo "|";
-  if((i<(size-1)));then
-    echo -n "+";
-    local -i j=0;
-    for((j=0;j<size;j++)){
-      echo -n "-";
-      if((j<(size-1)));then
-        echo -n "+";
-      fi
-    }
-  echo "+";
-  fi
-  }
-  echo -n "+";
-  local -i i=0;
-  for((i=0;i<size;i++)){
-    echo -n "-";
-    if((i<(size-1)));then
-      echo -n "+";
-    fi
-  }  
-  echo "+";
-  echo "";
-}
-#
 : 'ボード外側２列を除く内側のクイーン配置処理';
 function solve()
 {
@@ -585,40 +143,65 @@ function solve()
   local -i left="$2";
   local -i down="$3";
   local -i right="$4";
-  # 配置完了の確認 
-  # bh=-1 1111111111 すべての列にクイーンを置けると-1になる
-  (( down+1 ))|| return 1;
-  # 新たなQを配置 colは置き換える。
-  # row 右端にクイーンがすでに置かれていたら
-  # クイーンを置かずに１行下に移動する。
-  # rowを右端から１ビットずつ削っていく。
-  # ここではrowはすでにクイーンが置かれているか
-  # どうかだけで使う
+  # if (( !(down+1) ));then return 1; fi
+  ((down+1))||return 1; # ↑を高速化
   while(( row&1 ));do
-    # (( row>>=1 ))     # 右に１ビットシフト
-    # (( left<<=1 ));   # left 左に１ビットシフト
-    # (( right>>=1 ));  # right 右に１ビットシフト
-    (( row>>=1,left<<=1,right>>=1 ));
+    # ((row>>=1));
+    # ((left<<=1));
+    # ((right>>=1));
+    (( row>>=1,left<<=1,right>>=1 )); # 上記３行をまとめて書けます
   done
   (( row>>=1 ));      # １行下に移動する
-  local -i bitmap;
-  local -i total=0;
+  #
+  local -i bitmap;  # 再帰に必要な変数は必ず定義する必要があります。
+  local -i total=0; 
+  #
+  # 以下のwhileを一行のforにまとめると高速化が期待できます。
+  # local -i bitmap=~(left|down|right);
+  # while ((bitmap!=0));do
+  # :
+  # (( bitmap^=bit ))
+  # done
   for (( bitmap=~(left|down|right);bitmap!=0;bitmap^=bit));do
     local -i bit=$(( -bitmap&bitmap ));
-    solve "$row" "$(( (left|bit)<<1 ))" "$(( (down|bit) ))" "$(( (right|bit)>>1 ))"  ; 
-    (( total+=$? ));
+
+    # ret=$( solve "$row" "$(( (left|bit)<<1 ))" "$(( (down|bit) ))" "$(( (right|bit)>>1 ))")  ; 
+    #  ret=$?;
+    # [[ $ret -gt 0 ]] && { 
+    # ((total+=$ret));
+    # }  # solve()で実行したreturnの値は $? に入ります。
+    # 上記はやや冗長なので以下の２行にまとめて書くことができます。
+  solve "$row" "$(( (left|bit)<<1 ))" "$(( (down|bit) ))" "$(( (right|bit)>>1 ))"; 
+    ((total+=$?));  # solve()で実行したreturnの値は $? に入ります。
   done
-  return $total;
+  return $total;  # 合計を戻り値にします
+}
+#
+: 'solve()を呼び出して再帰を開始する';
+function process()
+{
+  local -i size="$1";
+  local -i sym="$2"; # COUNT2 COUNT4 COUNT8
+  # B[0]:row B[1]:left B[2]:down B[3]:right
+  solve "$(( B[0]>>2 ))" \
+        "$(( B[1]>>4 ))" \
+        "$(( (((B[2]>>2 | ~0<<size-4)+1)<<size-5)-1 ))" \
+        "$(( B[3]>>4<<size-5 ))";
+  (( COUNTER[$sym]+=$? ));
 }
 #
 : 'クイーンの効きをチェック';
 function placement()
 {
-  # local -i size="$1";
-  # local -i dimx="$2";     # dimxは行 dimyは列
-  # local -i dimy="$3";
+  local -i size="$1";
+  local -i dimx="$2";     # dimxは行 dimyは列
+  local -i dimy="$3";
   local -a t_x=(${B[4]}); # 同じ場所の配置を許す
-  (( t_x[$2]==$3 ))&& return 1;
+  # if (( t_x[dimx]==dimy ));then
+  #   return 1;
+  # fi
+  # 上記を以下のように書くことができます
+  (( t_x[dimx]==dimy ))&& return 1;
   : '
   #
   #
@@ -642,19 +225,7 @@ function placement()
   #    | | | | | |      
   #    +-+-+-+-+-+  
   #';
-  ((B[0] & 1<<$2)) && return 0;
-  ((B[1] & 1<<($1-1-$2+$3))) && return 0;
-  ((B[2] & 1<<$3)) && return 0;
-  ((B[3] & 1<<($2+$3))) && return 0;
-  if (( t_x[0]==0 ));then
-    if (( t_x[1]!=-1));then
-      # bitmap=$(( bitmap|2 ));
-      # bitmap=$(( bitmap^2 ));
-      #((bitmap&=~2));
-      # 上と下は同じ趣旨
-      (((t_x[1]>=$2) && ($3==1)))&&{ return 0; }
-    fi
-  else
+  if (( t_x[0] ));then
   : '
   #
   # 【枝刈り】Qが角にない場合
@@ -693,43 +264,184 @@ function placement()
   #  ２．最下段枝刈り
   #  LSATMASKの意味は最終行でBOUND1以下または
   #  BOUND2以上にクイーンは置けないということ
-  #  BOUND2は$1-t_x[0]
-  #  if(row==$1E){
+  #  BOUND2はsize-t_x[0]
+  #  if(row==sizeE){
   #    //if(!bitmap){
   #    if(bitmap){
   #      if((bitmap&LASTMASK)==0){
   ';
-    if (( t_x[0]!=-1));then
-      ((  ($3==0 || $3==$1-1) && 
-          ($2<t_x[0]||$2>=$1-t_x[0])
-      ))&&{ return 0; } 
-      ((  ($2==0 || $2==$1-1) &&
-          ($3<t_x[0]||$3>=$1-t_x[0])
-      ))&&{ return 0; } 
-     fi
+    #if (( t_x[0]!=-1));then
+    # 上記は if コマンドすら不要です
+    [[ t_x[0] -ne -1 ]]&&{    # -ne は != と同じです
+      (((dimx<t_x[0]||dimx>=size-t_x[0])
+        &&(dimy==0||dimy==size-1)))&&{ return 0; } 
+      (((dimx==size-1)&&((dimy<=t_x[0])||
+          dimy>=size-t_x[0])))&&{ return 0; } 
+    }
+  else
+    #if (( t_x[1]!=-1));then
+    # 上記は if コマンドすら不要です
+    [[ t_x[1] -ne -1 ]]&&{
+      # bitmap=$(( bitmap|2 )); # 枝刈り
+      # bitmap=$(( bitmap^2 )); # 枝刈り
+      #((bitmap&=~2)); # 上２行を一行にまとめるとこうなります
+      # ちなみに上と下は同じ趣旨
+      # if (( (t_x[1]>=dimx)&&(dimy==1) ));then
+      #   return 0;
+      # fi
+      (((t_x[1]>=dimx) && (dimy==1)))&&{ return 0; }
+    }
   fi
-  (( B[0]|=1<<$2, 
-  B[1]|=1<<($1-1-$2+$3),
-  B[2]|=1<<$3,
-  B[3]|=1<<($2+$3) ));
-  t_x[$2]="$3"; 
-  B[4]="${t_x[@]}"; # Bに反映  
+  # B[0]:row B[1]:left B[2]:down B[3]:right
+  (( (B[0] & 1<<dimx)|| (B[1] & 1<<(size-1-dimx+dimy))||
+     (B[2] & 1<<dimy)|| (B[3] & 1<<(dimx+dimy)) )) && return 0;
+  # ((B[0]|=1<<dimx));
+  # ((B[1]|=1<<(size-1-dimx+dimy)));
+  # ((B[2]|=1<<dimy));
+  # ((B[3]|=1<<(dimx+dimy)));
+  # 上記４行を一行にまとめることができます。
+  ((B[0]|=1<<dimx, B[1]|=1<<(size-1-dimx+dimy),B[2]|=1<<dimy,B[3]|=1<<(dimx+dimy) ));
+  #
+  # 配列の中に配列があるので仕方がないですが要検討箇所です。
+  t_x[$dimx]="$dimy"; 
+  B[4]=${t_x[@]}; # Bに反映  
   #
   # ボードレイアウト出力
-  (( $DISPLAY==1)) && board[$2]=$((1<<$3));
+  # if [[ DISPLAY ]];then 
+  #   board[$dimx]=$((1<<dimy)); 
+  # fi
+  # 上記を一行にまとめることができます。
+  [[ $DISPLAY ]] && board[$dimx]=$((1<<dimy));
   #
   return 1;
 }
 #
-: 'キャリーチェーン';
-function carryChain()
+: 'キャリーチェーン対象解除法';
+function carryChainSymmetry()
+{
+  local -i n="$1";
+  local -i w="$2";
+  local -i s="$3";
+  local -i e="$4";
+  # n,e,s=(N-2)*(N-1)-1-w の場合は最小値を確認する。
+  local -i ww=$(( (size-2)*(size-1)-1-w ));
+  local -i w2=$(( (size-2)*(size-1)-1 ));
+  # 対角線上の反転が小さいかどうか確認する
+  (( (s==ww)&&(n<(w2-e)) ))&& return;
+  # 垂直方向の中心に対する反転が小さいかを確認
+  (( (e==ww)&&(n>(w2-n)) ))&& return;
+  # 斜め下方向への反転が小さいかをチェックする
+  (( (n==ww)&&(e>(w2-s)) ))&& return ;
+  #
+  # 【枝刈り】 １行目が角の場合
+  #  １．回転対称チェックせずCOUNT8にする
+  local -a t_x=(${B[4]}); # 同じ場所の配置を許す
+  (( t_x[0] ))||{ # || は 条件が！であることを示します
+    process "$size" "2";  #COUNT8
+    #
+    # ボードレイアウト出力 # 出力 1:bitmap版 0:それ以外
+    ((DISPLAY==1))&& printRecordCarryChain "$size" "1";
+    return;
+  }
+  # n,e,s==w の場合は最小値を確認する。
+  # : '右回転で同じ場合は、
+  # w=n=e=sでなければ値が小さいのでskip
+  # w=n=e=sであれば90度回転で同じ可能性 ';
+  ((s==w))&&{
+    (( (n!=w)||(e!=w) ))&& return;
+    process "$size" "0" # COUNT2
+    # ボードレイアウト出力 # 出力 1:bitmap版 0:それ以外
+    ((DISPLAY==1))&& printRecordCarryChain "$size" "1";
+    return ;
+  }
+  # : 'e==wは180度回転して同じ
+  # 180度回転して同じ時n>=sの時はsmaller?  ';
+  (( (e==w)&&(n>=s) ))&&{
+    ((n>s))&& return ;
+    process "$size" "1" # COUNT4
+    # ボードレイアウト出力 # 出力 1:bitmap版 0:それ以外
+    ((DISPLAY==1))&& printRecordCarryChain "$size" "1";
+    return ;
+  }
+  process "$size" "2" ; #COUNT8
+  # ボードレイアウト出力 # 出力 1:bitmap版 0:それ以外
+  ((DISPLAY==1))&& printRecordCarryChain "$size" "1";
+  return ;
+}
+#
+: 'チェーンのビルド';
+function buildChain()
 {
   local -i size="$1";
-  # カウンター配列 COUNT2:0 COUNT4:1 COUNT8:2
-  local -i COUNTER[0]=COUNTER[1]=COUNTER[2]=0;  
-  # チェーンの初期化
-  local -a pres_a;
-  local -a pres_b;
+  local -a wB=sB=eB=nB=X; 
+  wB=("${B[@]}");
+  #
+  # １ 上の２行に配置
+  #
+  #for ((w=0;w<=(size/2)*(size-3);w++));do
+  # i++ よりも ++i のほうが断然高速です。
+  for ((w=0;w<=(size/2)*(size-3);++w));do
+    B=("${wB[@]}");
+    # Bの初期化 #0:row 1:left 2:down 3:right 4:dimx
+    #for ((bx_i=0;bx_i<size;bx_i++));do X[$bx_i]=-1; done
+    # i++ よりも ++i のほうが断然高速です。
+    for ((bx_i=0;bx_i<size;++bx_i));do X[$bx_i]=-1; done
+    B=([0]=0 [1]=0 [2]=0 [3]=0 [4]=${X[@]});
+    placement "$size" "0" "$((pres_a[w]))"; # １　０行目と１行目にクイーンを配置
+    [[ $? -eq 0 ]] && continue;
+    placement "$size" "1" "$((pres_b[w]))";
+    [[ $? -eq 0 ]] && continue;
+    #
+    # ２ 90度回転
+    #
+    nB=("${B[@]}");
+    local -i mirror=$(( (size-2)*(size-1)-w ));
+    #for ((n=w;n<mirror;n++));do 
+    # i++ よりも ++i のほうが断然高速です。
+    for ((n=w;n<mirror;++n));do 
+      B=("${nB[@]}");
+      placement "$size" "$((pres_a[n]))" "$((size-1))"; 
+      [[ $? -eq 0 ]] && continue;
+      placement "$size" "$((pres_b[n]))" "$((size-2))";
+      [[ $? -eq 0 ]] && continue;
+      #
+      # ３ 90度回転
+      #
+      eB=("${B[@]}");
+      #for ((e=w;e<mirror;e++));do 
+      # i++ よりも ++i のほうが断然高速です。
+      for ((e=w;e<mirror;++e));do 
+        B=("${eB[@]}");
+        placement "$size" "$((size-1))" "$((size-1-pres_a[e]))"; 
+        [[ $? -eq 0 ]] && continue;
+        placement "$size" "$((size-2))" "$((size-1-pres_b[e]))"; 
+        [[ $? -eq 0 ]] && continue;
+        #
+        # ４ 90度回転
+        #
+        sB=("${B[@]}");
+        #for ((s=w;s<mirror;s++));do
+        # i++ よりも ++i のほうが断然高速です。
+        for ((s=w;s<mirror;++s));do
+          B=("${sB[@]}")
+          placement "$size" "$((size-1-pres_a[s]))" "0";
+          [[ $? -eq 0 ]] && continue;
+          placement "$size" "$((size-1-pres_b[s]))" "1"; 
+          [[ $? -eq 0 ]] && continue;
+          #
+          #  対象解除法
+          carryChainSymmetry "$n" "$w" "$s" "$e" ; 
+          #
+        done
+      done
+    done
+  done
+}
+#
+: 'チェーンの初期化';
+function initChain()
+{
+  local -i size="$1";
   local -i idx=0;
   local -i a=b=0;
   for ((a=0;a<size;a++));do
@@ -741,116 +453,19 @@ function carryChain()
       ((idx++));
     done
   done
-  #
-  # チェーンのビルド
-  local -a wB=sB=eB=nB=X; 
-  wB=("${B[@]}");
-  for ((w=0;w<=(size/2)*(size-3);w++));do
-    B=("${wB[@]}");
-    # Bの初期化 #0:row 1:left 2:down 3:right 4:dimx
-    for ((bx_i=0;bx_i<size;bx_i++));do X[$bx_i]=-1; done
-    B=([0]=0 [1]=0 [2]=0 [3]=0 [4]=${X[@]});
-    placement "$size" "0" "$((pres_a[w]))"; # １　０行目と１行目にクイーンを配置
-    [[ $? -eq 0 ]] && continue;
-    placement "$size" "1" "$((pres_b[w]))";
-    [[ $? -eq 0 ]] && continue;
-    #
-    # ２ 90度回転
-    nB=("${B[@]}");
-    local -i mirror=$(( (size-2)*(size-1)-w ));
-    for ((n=w;n<mirror;n++));do 
-      B=("${nB[@]}");
-      placement "$size" "$((pres_a[n]))" "$((size-1))"; 
-      [[ $? -eq 0 ]] && continue;
-      placement "$size" "$((pres_b[n]))" "$((size-2))";
-      [[ $? -eq 0 ]] && continue;
-      #
-      # ３ 90度回転
-      eB=("${B[@]}");
-      for ((e=w;e<mirror;e++));do 
-        B=("${eB[@]}");
-        placement "$size" "$((size-1))" "$((size-1-pres_a[e]))"; 
-        [[ $? -eq 0 ]] && continue;
-        placement "$size" "$((size-2))" "$((size-1-pres_b[e]))"; 
-        [[ $? -eq 0 ]] && continue;
-        #
-        # ４ 90度回転
-        sB=("${B[@]}");
-        for ((s=w;s<mirror;s++));do
-          B=("${sB[@]}")
-          placement "$size" "$((size-1-pres_a[s]))" "0";
-          [[ $? -eq 0 ]] && continue;
-          placement "$size" "$((size-1-pres_b[s]))" "1"; 
-          [[ $? -eq 0 ]] && continue;
-          #
-          #  対象解除法
-          # n,e,s=(N-2)*(N-1)-1-w の場合は最小値を確認する。
-          local -i ww=$(( (size-2)*(size-1)-1-w ));
-          local -i w2=$(( (size-2)*(size-1)-1 ));
-          # 対角線上の反転が小さいかどうか確認する
-          (( (s==ww)&&(n<(w2-e)) ))&& continue;
-          # 垂直方向の中心に対する反転が小さいかを確認
-          (( (e==ww)&&(n>(w2-n)) ))&& continue;
-          # 斜め下方向への反転が小さいかをチェックする
-          (( (n==ww)&&(e>(w2-s)) ))&& continue ;
-          #
-          # 【枝刈り】 １行目が角の場合
-          #  １．回転対称チェックせずCOUNT8にする
-          local -a t_x=(${B[4]}); # 同じ場所の配置を許す
-          (( t_x[0] ))||{
-            solve "$(( B[0]>>2 ))" \
-                  "$(( B[1]>>4 ))" \
-                  "$(( (((B[2]>>2 | ~0<<size-4)+1)<<size-5)-1 ))" \
-                  "$(( B[3]>>4<<size-5 ))";
-            (( COUNTER[2]+=$? ));
-            #
-            # ボードレイアウト出力 # 出力 1:bitmap版 0:それ以外
-            if ((DISPLAY==1));then printRecordCarryChain "$size" "1"; read -p ""; fi
-            continue;
-          }
-          # n,e,s==w の場合は最小値を確認する。
-          # : '右回転で同じ場合は、
-          # w=n=e=sでなければ値が小さいのでskip
-          # w=n=e=sであれば90度回転で同じ可能性 ';
-          ((s==w))&&{
-            (( (n!=w)||(e!=w) ))&& continue;
-            solve "$(( B[0]>>2 ))" \
-                  "$(( B[1]>>4 ))" \
-                  "$(( (((B[2]>>2 | ~0<<size-4)+1)<<size-5)-1 ))" \
-                  "$(( B[3]>>4<<size-5 ))";
-            (( COUNTER[0]+=$? ));
-            #
-            # ボードレイアウト出力 # 出力 1:bitmap版 0:それ以外
-            ((DISPLAY==1))&& { printRecordCarryChain "$size" "1"; read -p "" ;}
-            continue ;
-          }
-          # : 'e==wは180度回転して同じ
-          # 180度回転して同じ時n>=sの時はsmaller?  ';
-          (( (e==w)&&(n>=s) ))&&{
-            ((n>s))&& continue ;
-            solve "$(( B[0]>>2 ))" \
-                  "$(( B[1]>>4 ))" \
-                  "$(( (((B[2]>>2 | ~0<<size-4)+1)<<size-5)-1 ))" \
-                  "$(( B[3]>>4<<size-5 ))";
-            (( COUNTER[1]+=$? ));
-            #
-            # ボードレイアウト出力 # 出力 1:bitmap版 0:それ以外
-            ((DISPLAY==1))&& { printRecordCarryChain "$size" "1"; read -p "" ;}
-            continue ;
-          }
-          solve "$(( B[0]>>2 ))" \
-                "$(( B[1]>>4 ))" \
-                "$(( (((B[2]>>2 | ~0<<size-4)+1)<<size-5)-1 ))" \
-                "$(( B[3]>>4<<size-5 ))";
-          (( COUNTER[2]+=$? ));
-          #
-          # ボードレイアウト出力 # 出力 1:bitmap版 0:それ以外
-          ((DISPLAY==1))&& { printRecordCarryChain "$size" "1"; read -p "" ;}
-          continue;
-        done
-      done
-    done
-  done
+}
+#
+: 'チェーンの構築';
+function carryChain()
+{
+  local -i size="$1";
+  # 初期化
+  pres_a=pres_b=0;
+  TOTAL=UNIQUE=0;
+  COUNTER[0]=COUNTER[1]=COUNTER[2]=0;
+  # 処理
+  initChain "$size";  # チェーンの初期化
+  buildChain "$size"; # チェーンのビルド
   # 集計
   UNIQUE=$(( COUNTER[0]+COUNTER[1]+COUNTER[2] ));
   TOTAL=$(( COUNTER[0]*2+COUNTER[1]*4+COUNTER[2]*8 ));
